--- a/heroku.html
+++ b/heroku.html
@@ -7,7 +7,7 @@
 <div></div>
 <h1>Try Heroku again!</h1>
 <p>Pretty sure I nailed it...:) </p>
-<img src="https://s-media-cache-ak0.pinimg.com/736x/0d/e7/ce/0de7cea6ad13711e506586eacfe5d68d.jpg">
+<img src="frenchie.jpg">
 
 </body>
 </html>
